[package]
name = "daemons"
version = "0.5.4"
authors = ["mendess <pedro.mendes.26@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["time", "sync", "rt"] }
