[package]
name = "daemons"
version = "0.7.1"
authors = ["mendess <pedro.mendes.26@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["time", "sync", "rt"] }
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread", "macros"] }
simple_logger = "1"
chrono = "0.4.19"
